# BinSight

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  codebook.toml
fuzz/in/: binsight_old  hello_elf_32  hello_elf_64  stripped_elf_32  stripped_elf_64
include/: utils.h
include/core/: binary.h  error.h  format.h  mem.h  reader.h  utils.h
include/formats/elf/: elf_loader.h  elf_parser.h  elf_print.h  elf_utils.h
src/: main.c
src/core/: binary.c  binary.h  error.c  format.c  format.h  mem.c  reader.c  utils.c
src/formats/elf/: elf_loader.c  elf_loader.h  elf_parser.c  elf_parser.h  elf_print.c  elf_utils.c  elf_utils.h
tests/: CMakeLists.txt  linux_integrity_test.py
tests/core/: error_test.cpp  mem_test.cpp  reader_test.cpp
